--- a/landing/landing-styles.css
+++ b/landing/landing-styles.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab&display=swap');
+
+/* CSS RESET START */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -13,130 +15,161 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-    display: block;
+	display: block;
 }
 body {
-    line-height: 1;
+	line-height: 1;
 }
 
 a{
-    text-decoration: none;
+	text-decoration: none;
 }
 
-ol, ul {
-    list-style: none;
-}
 blockquote, q {
-    quotes: none;
+	quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-    content: '';
-    content: none;
+	content: '';
+	content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
+/* CSS RESET END */
+
 body{
-    background-color: grey;
-    font-family: 'Montserrat', sans-serif;
+    background-color: gray;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .wrapper{
-    margin-left: 70px;
-    margin-right: 70px;
-}
-
-.logo{
-    align-self: center;
+	margin-left: 70px;
+	margin-right: 70px;
 }
 
 .header{
-    height: 15;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+	height:15vh;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 .nav-menu{
-    width: 370px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+	width: 370px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .nav-item{
-    display: flex;
-    font-size: 16px;
+	display: flex;
+	font-size: 16px;
 }
 
+
+
 .van-bg{
-    height: 100vh;
-    background-size: cover;
-    background-image: url(https://phototravelnomads.com/wp-content/uploads/Volkswagen-Kombi-Camper-Van-Neuseeland.jpg);
-    background-repeat: no-repeat;
-    background-position: px;
+	height:85vh;
+	background-position: 1px;
+	background-size: cover;
+	background-image: url("https://phototravelnomads.com/wp-content/uploads/Volkswagen-Kombi-Camper-Van-Neuseeland.jpg");
+	background-repeat: no-repeat;
+	
 }
 
 .van-bg-text{
-    font-size: 36px;
-    padding-top: 125px;
-    padding-left: 80px;
-    line-height: 36px;
-    border-bottom: 2px black solid;
-    width: 500px;
+	padding-top:125px;
+	padding-left: 125px;
+	font-size: 36px;
+	text-decoration: underline;
 }
 
 #about{
-    height: 100vh;
+	height:100vh
+}
+
+#about2{
+	height:100vh
+}
+
+#about3{
+	height:100vh
 }
 
 .title{
-    font-size: 30px;
-    margin-top: 30px;
+	font-size: 30px;
+	margin-top: 30px;
+}
+
+.title2{
+	font-size: 30px;
+	margin-top: 30px;
+}
+
+.title3{
+	font-size: 30px;
+	margin-top: 200px;
+}
+
+.title4{
+	font-size: 20px;
+	margin-top: 40px;
 }
 
 .about-text{
-    margin-top: 15px;
-    font-size: 18;
+	margin-top: 15px;
+	font-size: 20px;
 }
 
-.about-text-bigger{
-    font-weight: bolder;
-    font-size: 20px;
+.bigger{
+	font-size: 20px;
+	font-weight: bolder;
 }
 
-.ol{
-    font-size: 22px;
-    margin-left: 30px
+ol{
+	font-size: 22px;
+	margin-left: 30px;
 }
 
-.li{
-    margin-top: 12px;
+li{
+	margin-top: 12px;
 }
 
 .about-images{
-    display: flex;
-    margin-top: 153px;
+	display: flex;
+	margin-top: 15px;
 }
 
 .img1{
-    width: 800px;
+	width: 605px;
 }
 
 .img2{
-    width: 650;
+	width: 605px;
+}
+
+.img3{
+    width: 300px;
+}
+
+.img4{
+    width: 300px;
+}
+
+.img5{
+    width: 300px;
 }
