--- a/Praktika/styles1.css
+++ b/Praktika/styles1.css
@@ -73,6 +73,7 @@ body {
 
 .nav-menu {
 	width: 370px;
+	height: 100px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -86,18 +87,20 @@ body {
 
 .logo {
 	display: flex;
-	height: 70px;
-	width: 70px;
-	background-image: url("./logo.svg");
+	height: 150px;
+	width: 400px;
+	background-image: url("naz.png");
 	align-self: center;
 	background-repeat: no-repeat;
+	
 }
 
 .van-bg {
-	height: 85vh;
-	background-position: 20px;
+	height: 100vh;
+	width: 185vh;
+	background-position: px;
 	background-size: cover;
-	background-image: url("./van");
+	background-image: url("fon.jpg");
 	background-repeat: no-repeat;
 
 }
