--- a/my_project/src/Header/Header.css
+++ b/my_project/src/Header/Header.css
@@ -4,9 +4,16 @@
 
 .Header-site-header {
     font-family: 'Montserrat', sans-serif;
-    border: 1px solid black;
-    padding: 10px;
-    margin: 5px;
+    padding: 1px;
+    margin: 0px;
+    text-align: center;
+    background-color: rgb(114, 79, 88);
+}
+
+.h1{
+    color: beige;
+    font-size:30px;
+	text-shadow: 2px 2px 2px #000;
 }
 
 .Header-site-header{
