--- a/my_project/src/Main/Main.css
+++ b/my_project/src/Main/Main.css
@@ -1,7 +1,9 @@
+/*Это квадрат слева*/
 .Main {
     border: 1px solid black;
     padding: 10px;
     margin: 5px;
+    background-color: rgba(240, 248, 255, 0.493);
 }
 
 .Main {
