--- a/my_project/src/App/App.css
+++ b/my_project/src/App/App.css
@@ -4,15 +4,11 @@
 *{
     font-family: 'Montserrat', sans-serif;
     color: rgb(20, 15, 15);
+    text-decoration: none;
 }
 
-.container {
 
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-areas: 
-            "h h i"
-            "m m s"
-            "f f f";
+
+.content{
+    color: white;
 }
