--- a/my_project/src/Components/Main/Main.css
+++ b/my_project/src/Components/Main/Main.css
@@ -3,7 +3,9 @@
     border: 1px solid black;
     padding: 10px;
     margin: 5px;
-    background-color: rgba(240, 248, 255, 0.493);
+    background-color: rgba(240, 248, 255, 0.699);
+    font-size: 18px;
+
 }
 
 .Main {
