--- a/my_project/src/Components/Sidebar/Sidebar.css
+++ b/my_project/src/Components/Sidebar/Sidebar.css
@@ -1,10 +1,11 @@
 /*Это квадрат справа*/
 
 .Sidebar {
-    border: 1px solid black;
     padding: 10px;
     margin: 5px;
-    background-color: rgba(88, 60, 82, 0.322);
+    background-color: rgba(88, 60, 82, 0);
+    margin-left: auto;
+    width: 1000px;
 }
 
 .Sidebar {
@@ -18,6 +19,7 @@
 .Sidebar ul li {
     list-style-type: none;
     padding-left: 0;
-    font-size: 18px;
+    font-size: 36px;
+    text-align: center;
 }
 
