--- a/my_project/src/index.css
+++ b/my_project/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url('./fff.jpg') no-repeat center center fixed;
+  background-color: black;
+  
+  background: url('./banner_image1.jpg') no-repeat center center fixed;
 
        -webkit-background-size: cover;
 
