--- a/my_project/src/Components/Game/Board.css
+++ b/my_project/src/Components/Game/Board.css
@@ -3,7 +3,7 @@
     height: 300px;
     display: flex;
     flex-wrap: wrap;
-    background-image: url("./paper.jpg");
+    background-image: url("./paper1.jpg");
 }
 
 .image{
