--- a/my_project/src/Components/Game/Game.css
+++ b/my_project/src/Components/Game/Game.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab&display=swap');
+
 .wrapper{
+    font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -10,6 +13,7 @@
 }
 
 .start_btn{
+    font-family: 'Montserrat', sans-serif;
     width: 200px;
     height: 35px;
     margin-bottom: 25px;
