--- a/my_project/src/Components/Header/Header.css
+++ b/my_project/src/Components/Header/Header.css
@@ -7,7 +7,18 @@
     padding: 1px;
     margin: 0px;
     text-align: center;
-    background-image: url("./metro.jpg");
+    background: url('./metro.jpg') no-repeat center center fixed;
+
+       -webkit-background-size: cover;
+
+       -moz-background-size: cover;
+
+       -o-background-size: cover;
+
+       background-size: cover;
+
+       background-position: left;
+
     border: 2px solid rgb(0, 0, 0);
     width: auto;
     height: auto;
@@ -18,6 +29,7 @@
     color: beige;
     font-size:40px;
 	text-shadow: 2px 2px 2px #000;
+    height: 15px;
 }
 
 .Header-site-header{
@@ -25,13 +37,12 @@
 }
 
 .nav1{
-    width: auto;
     font-size: 20px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
     text-align: left;
-    width: 550px;
+    width: 500px;
 }
 
 .nav-item a {
@@ -55,3 +66,56 @@
     display: flex;
 }
 
+.hi{
+    color: rgb(148, 54, 0);
+    font-size: 16px;
+    height: 10px;
+    padding-bottom: 10px;
+    font-weight: bold;
+    text-shadow: 4px 4px 4px #000;
+}
+
+@media (max-width:555px) {
+	.nav-item a {
+        width: auto;
+        margin-bottom: 25px;
+        cursor: pointer;
+        color: rgb(206, 206, 206);
+        outline: none;
+        background: #414040;
+        border: 1px solid rgb(27, 27, 27);
+        display: flex;
+        text-align: center;
+        font-weight: bold;
+        font-size: 15px;
+    }
+
+    .h1{
+        color: beige;
+        font-size:25px;
+        text-shadow: 2px 2px 2px #000;
+    }
+
+    .nav1{
+        width: auto;
+        height: 20px;
+        font-size: 10px;
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+
+    }
+
+    .Header-site-header {
+        font-family: 'Montserrat', sans-serif;
+        padding: 50px;
+        margin: 0px;
+        text-align: center;
+        background-image: url("./metro.jpg");
+        border: 2px solid rgb(0, 0, 0);
+        width: auto;
+        height: 60px;
+        padding-top: 20px;
+    }
+
+}
